@@ -45,6 +45,9 @@ analysePrivateMethodsHelp = "Here you can toggle if kreXX shall analyse the priv
 useScopeAnalysisHelp = "Shall kreXX analyse all reachable class properties and methods? If set to 'TRUE', the default configuration for private and protected stuff is overwritten, in case that value is reachable."
 analyseConstantsHelp = "Here you can toggle, if kreXX shall analyse all constants of a class."
 maxStepNumberHelp = "A backtrace tends to produce a lot of output, and browsers tend to have problems with more than 100MB output in HTML text. Normally it is not unneccessary to go back more than 10 steps, but if you need to, you can increase this number here."
+getterHelpInfo = "Getter methods will NOT get called to get a result. Instead, kreXX tries to get the (possible) result from the properties of this class.<br/> If the getter method is used to compute this value, the values here may be inaccurate."
+unhandeldOtherHelp = "This is a (so far) unhandeled variable type. If you read this, please open a ticket on our Github bugtracker, so we can add a proper analysis for this type."
+
 localFunction = "Here you can enter your own alias function for \krexx::open().<br/> Example: When you enter &apos;gue&apos;, the function will be \krexx::gue($myObject); [or krexx($myObject, &apos;gue&apos;);],<br/> which only devs can use who have set the same value.This is useful, to prevent other devs from calling your debug functions."
 devHandle = "Locel open function"
 resetbutton = "Here you can reset your local settings, which are stored in a cookie.<br/> kreXX will then use the global settings (either ini-file or factory settings)."
@@ -60,7 +63,7 @@ configErrorIprange = "Wrong configuration for: 'output => iprange'! An empty IP 
 configErrorMaxRuntimeBig = "Wrong configuration for: 'runtime => maxRuntime'! Maximum for this server is: %s The configured setting was not applied!"
 php7 = "It looks like you are using PHP7. Fatal errors got removed in PHP7, meaning that they are now catchable like normal errors."
 php7yellow = "The fatal error handler does not work with PHP7!"
-getterHelpInfo = "Getter methods will NOT get called to get a result. Instead, kreXX tries to get the (possible) result from the properties of this class.<br/> If the getter method is used to compute this value, the values here may be inaccurate."
+
 maximumLevelReached1 = "Maximum nesting level for the analysis was reached. I will not go any further."
 maximumLevelReached2 =  "To increase this value, change the runtime => level setting."
 stringTooLarge = "This is a very large string with a none-standard encoding.<br /> For security reasons, we must escape it, but it is too large for this. Sorry."
